# DSA

./: 1.insert_an_element_in_an_Array.c  10.Stack_using_Linked_List.c  11.Prefix_Expression.c  12.Lnear_Queue.c  13.Queue_Using_Linked_List.c  14.Circular_Queue.c  15.BST.c  16.Graph.c  17.BFS.c  18.DFS.c  19.Bubble_Sort.c  20.Insertion_Sort.c  21.Selection_Sort.c  22.Merge_Sort.c  3.3x3_Matrix.c  3x3_Matrix.c  4.fill_a_square_matrix.c  5.Single_Linked_List.c  6.Circular_Linked_List.c  7.Double_Linked_List.c  8.Store_Polynomial.c  9.Stack_Using_Array.c  CMakeLists.txt  fill_a_square_matrix.c  highest_marks.c
Practical/: 10.Stack_using_Linked_List.c  13.Queue_Using_Linked_List.c  14.Circular_Queue.c  16.Graph.c  18.DFS.c  19.Bubble_Sort.c  2.highest_marks.c  6.Circular_Linked_List.c  8.Store_Polynomial.c
Theory/: 1.impliment stack using ll.txt  2.Infix to Postfix.txt  3.Pre to Post order in BST.txt  4.Evaluating the Postfix.txt  5.inorder.txt  6.AVL tree  7.AVL tree2.txt
