cmake_minimum_required(VERSION 3.27)
project(DSA C)

set(CMAKE_C_STANDARD 23)

add_executable(1.insert_an_element_in_an_Array 1.insert_an_element_in_an_Array.c)
add_executable(2.highest_marks 2.highest_marks.c)
add_executable(3.3x3_Matrix 3.3x3_Matrix.c)
add_executable(4.fill_a_square_matrix 4.fill_a_square_matrix.c)
add_executable(5.Single_Linked_List 5.Single_Linked_List.c)
add_executable(6.Circular_Linked_List 6.Circular_Linked_List.c)

add_executable(7.Double_Linked_List 7.Double_Linked_List.c)
add_executable(8.Store_Polynomial 8.Store_Polynomial.c)