cmake_minimum_required(VERSION 3.27)
project(DSA C)

set(CMAKE_C_STANDARD 23)

add_executable(1.insert_an_element_in_an_Array 1.insert_an_element_in_an_Array.c)
add_executable(2.highest_marks 2.highest_marks.c)
add_executable(3.3x3_Matrix 3.3x3_Matrix.c)
add_executable(4.fill_a_square_matrix 4.fill_a_square_matrix.c)
add_executable(5.Single_Linked_List 5.Single_Linked_List.c)
add_executable(6.Circular_Linked_List 6.Circular_Linked_List.c)
add_executable(7.Double_Linked_List 7.Double_Linked_List.c)
add_executable(8.Store_Polynomial 8.Store_Polynomial.c)
add_executable(9.Stack_Using_Array 9.Stack_Using_Array.c)
add_executable(10.Stack_using_Linked_List 10.Stack_using_Linked_List.c)
add_executable(11.Prefix_Expression 11.Prefix_Expression.c)
add_executable(12.Lnear_Queue 12.Lnear_Queue.c)
add_executable(13.Queue_Using_Linked_List 13.Queue_Using_Linked_List.c)
add_executable(14.Circular_Queue 14.Circular_Queue.c)
add_executable(15.BST 15.BST.c)
add_executable(16.Graph 16.Graph.c)
add_executable(17.BFS 17.BFS.c)
add_executable(18.DFS 18.DFS.c)
add_executable(19.Bubble_Sort 19.Bubble_Sort.c)
add_executable(20.Insertion_Sort 20.Insertion_Sort.c)
add_executable(21.Selection_Sort 21.Selection_Sort.c)
add_executable(22.Merge_Sort 22.Merge_Sort.c)