cmake_minimum_required(VERSION 3.27)
project(DSA C)

set(CMAKE_C_STANDARD 23)

# Practical
add_executable(1.insert_an_element_in_an_Array Practical/1.insert_an_element_in_an_Array.c)
add_executable(2.highest_marks Practical/2.highest_marks.c)
add_executable(3.3x3_Matrix Practical/3.3x3_Matrix.c)
add_executable(4.fill_a_square_matrix Practical/4.fill_a_square_matrix.c)
add_executable(5.Single_Linked_List Practical/5.Single_Linked_List.c)
add_executable(6.Circular_Linked_List Practical/6.Circular_Linked_List.c)
add_executable(7.Double_Linked_List Practical/7.Double_Linked_List.c)
add_executable(8.Store_Polynomial Practical/8.Store_Polynomial.c)
add_executable(9.Stack_Using_Array Practical/9.Stack_Using_Array.c)
add_executable(10.Stack_using_Linked_List Practical/10.Stack_using_Linked_List.c)
add_executable(11.Prefix_Expression Practical/11.Prefix_Expression.c)
add_executable(12.Lnear_Queue Practical/12.Lnear_Queue.c)
add_executable(13.Queue_Using_Linked_List Practical/13.Queue_Using_Linked_List.c)
add_executable(14.Circular_Queue Practical/14.Circular_Queue.c)
add_executable(15.BST Practical/15.BST.c)
add_executable(16.Graph Practical/16.Graph.c)
add_executable(17.BFS Practical/17.BFS.c)
add_executable(18.DFS Practical/18.DFS.c)
add_executable(19.Bubble_Sort Practical/19.Bubble_Sort.c)
add_executable(20.Insertion_Sort Practical/20.Insertion_Sort.c)
add_executable(21.Selection_Sort Practical/21.Selection_Sort.c)
add_executable(22.Merge_Sort Practical/22.Merge_Sort.c)

#Theory

